syntax = "proto3";

package msnowflake;

service MSnowflake {
    rpc NextId (IdRequest) returns (IdResponse) {
    }
    rpc NextIds (IdRequest) returns (IdResponse) {
    }
}

message IdResponse {
    int32 code = 1;
    string message = 2;
    int64 id = 3;
    repeated int64 ids = 4;
}

message IdRequest {
    uint32 num = 1;
}